# ASL-Recognition-Model

./: Activation.h  CMakeLists.txt  Derivative.cpp  Derivative.h  Doxyfile  Matrix.cpp  Matrix.h  Network.cpp  Network.h  README.md  read_weights.cpp  source.cpp  write_weights.cpp
all_yaml_configs/: network_config_train.yaml  settings_predict.yaml  settings_train.yaml
docs/html/: Activation_8h.html  Activation_8h__dep__incl.map  Activation_8h__dep__incl.md5  Activation_8h__incl.map  Activation_8h__incl.md5  Activation_8h_source.html  Derivative_8h.html  Derivative_8h__dep__incl.map  Derivative_8h__dep__incl.md5  Derivative_8h__incl.map  Derivative_8h__incl.md5  Derivative_8h_source.html  Matrix_8h.html  Matrix_8h__dep__incl.map  Matrix_8h__dep__incl.md5  Matrix_8h__incl.map  Matrix_8h__incl.md5  Matrix_8h_source.html  Network_8h.html  Network_8h__incl.map  Network_8h__incl.md5  Network_8h_source.html  annotated.html  classLayer-members.html  classLayer.html  classLayer__coll__graph.map  classLayer__coll__graph.md5  classMatrix-members.html  classMatrix.html  classNetwork-members.html  classNetwork.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  (+4 more)
include/: Activation.h  Derivative.h  Matrix.h  Network.h  Optimizers.h
src/: Activation.cpp  Derivative.cpp  Matrix.cpp  Network.cpp  Optimizers.cpp  read_weights.cpp  write_weights.cpp
test/: activation_test.cpp  config_predict_test.yaml  config_train_test.yaml  derivative_test.cpp  matrix_test.cpp  read_weights_test.cpp  test_functions.cpp
(+70 files in other folders)
